# AndroidCrash

./: README.md  build.gradle  config.gradle  gradle.properties  settings.gradle
android-crash/: build.gradle
android-crash/src/main/cpp/: CMakeLists.txt
android-crash/src/main/cpp/src/: crash.cpp
android-crash/src/main/java/com/hl/android/crash/: AndroidCrash.java  CrashLib.kt
android-crash/src/main/java/com/hl/android/crash/callback/: OnCrashListener.kt  OnJavaCrashListener.java  OnNativeCrashListener.java
android-crash/src/main/java/com/hl/android/crash/data/: JavaCrashInfo.kt  NativeCrashInfo.kt
android-crash/src/main/java/com/hl/android/crash/impl/: ICrash.kt  JavaCrashImp.kt  NativeCrashImp.kt
android-crash/src/main/java/com/hl/android/crash/utils/: ProcessUtil.kt
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/babyte/banativecrash/: MainActivity.kt
app/src/main/java/com/hl/android/crash/demo/: MainActivity.kt
app/src/main/res/layout/: activity_main.xml
breakpad-android/: build.gradle  consumer-rules.pro
breakpad-android/src/main/: AndroidManifest.xml
breakpad-android/src/main/cpp/: CMakeLists.txt  breakpad.cpp
breakpad-android/src/main/java/com/babyte/breakpad/: BaByteBreakpad.kt
breakpad-android/src/main/java/com/babyte/breakpad/callback/: NativeCrashCallback.java
breakpad-android/src/main/java/com/hl/android/crash/nativecapture/breakpad/: BaByteBreakpad.kt  Breakpad.kt
breakpad-android/src/main/java/com/hl/android/crash/nativecapture/breakpad/callback/: NativeCrashCallback.java
commonGradle/: MavenPublish.gradle  android_publish_mavencentral_portal.gradle
gradle/wrapper/: gradle-wrapper.properties
